# learn_opengl

./: read.md  readme.md
move/: app  main.cpp  triangle.frag
move/app.dSYM/Contents/Resources/DWARF/: app
move/dependencies/include/glad/: glad.h
new/: CMakeLists.txt
openglA/: 14a-refresh.c  14b-kbd-input.c  14c-color-change.c  app  glad.c  main.cpp
openglA/app.dSYM/Contents/Resources/DWARF/: app
shader/: common.c  main.cpp
shaders/: app  common.c  main copy.txt  main.cpp  readme.md  triangle.frag
shaders/app.dSYM/Contents/Resources/DWARF/: app
triangle/: app  main  main.cpp  triangle.vert
triangle/app.dSYM/Contents/Resources/DWARF/: app
triangle/main.dSYM/Contents/Resources/DWARF/: main
varing/: app  main.cpp  main.txt  main_.cpp  triangle.frag  triangle.vert
varing/app.dSYM/Contents/Resources/DWARF/: app
